
= rufus-jig CHANGELOG.txt


== rufus-jig - 0.1.10    released 2010/01/06

- test/con to test/conc (win issue), thanks gauched
- made net/http Http thread-safe (serialization through synchronization)
- :re_put_ok => false rework (deleting at first)


== rufus-jig - 0.1.9    released 2009/12/29

- Couch now handling conflict re-get by itself
- :re_put_ok => false option for Rufus::Jig::Couch
  (refusing puts on deleted documents)


== rufus-jig - 0.1.8    released 2009/12/25

- using rufus-json


== rufus-jig - 0.1.7    released 2009/12/23

- implemented :force_json => true for services returning JSON in plain/text
- :accept => :json as a shorcut for :accept -> 'application/json'


== rufus-jig - 0.1.6    released 2009/12/21

- implemented close for Http and Couch classes


== rufus-jig - 0.1.5    released 2009/12/17

- returning true (not raising) in case of 409 conflict
- using jeweler (thanks Kenneth)
- made jig/patron really thread-safe


== rufus-jig - 0.1.4    released 2009/12/15

- made jig/patron thread-safe


== rufus-jig - 0.1.3    released 2009/12/15

- delete(doc) without _rev now raises ArgumentError
- Patron session go stale. Now refreshing them at each request.
- CouchDatabase#put_doc : 1 or 2 params


== rufus-jig - 0.1.2    released 2009/12/07

- fixed issue with '/' and net/http. Thanks Torsten.


== rufus-jig - 0.1.1    released


== rufus-jig - 0.1.0    released 2009/11/09
